--- a/.github/workflows/backend-app.yaml
+++ b/.github/workflows/backend-app.yaml
@@ -79,11 +79,12 @@ jobs:
 
       - name: Deployment + Service + Ingress
         run: |
-         sed -i 's@CONTAINER_IMAGE@'"${{ vars.ECR_REGISTRY }}/flask-app:${{ github.sha }}"'@' k8s-manifest/backend/backend-deployment.yaml
-         kubectl apply -f k8s-manifest/backend/configmap.yaml
-         kubectl apply -f k8s-manifest/backend/service-account.yml
-         kubectl apply -f k8s-manifest/backend/backend-deployment.yaml
-         kubectl apply -f k8s-manifest/backend/ingress-backend.yaml
+         sed -i 's@CONTAINER_IMAGE@'"${{ vars.ECR_REGISTRY }}/flask-app:${{ github.sha }}"'@' k8s/backend/deployment.yaml
+         kubectl apply -f k8s/backend/configmap.yaml
+         kubectl apply -f k8s/backend/service-account.yaml
+         kubectl apply -f k8s/backend/deployment.yaml
+         kubectl apply -f k8s/backend/service.yaml
+         kubectl apply -f k8s/backend/ingress.yaml
 
 
 
