--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,14 +16,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 ##################### runtime stage ###################
-#FROM python:3.12-slim
+FROM python:3.12-slim
 #
-## same unprivileged user section you already have …
-#RUN addgroup --system app && adduser --system --ingroup app app
+#same unprivileged user section you already have …
+RUN addgroup --system app && adduser --system --ingroup app app
 WORKDIR /app
-#COPY --from=builder /usr/local /usr/local
-#COPY --from=builder /app /app
-#USER app
+COPY --from=builder /usr/local /usr/local
+COPY --from=builder /app /app
+USER app
 
 EXPOSE 5000
 CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
