--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -23,12 +23,12 @@ spec:
         - name: DB_SECRET_NAME
           value: "rds!cluster-7875e7db-83ed-4a7c-a2b6-c1e6444698d6"
         - name: AWS_REGION
-          value: "us-east-1"
-        - name: JWT_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: backend-secrets
-              key: jwt 
+          value: "us-west-1"
+       # - name: JWT_SECRET
+        #  valueFrom:
+         #   secretKeyRef:
+          #    name: backend-secrets
+           #   key: jwt 
         - name: DB_HOST
           valueFrom:
             configMapKeyRef:
