--- a/.github/workflows/backend-app.yaml
+++ b/.github/workflows/backend-app.yaml
@@ -85,6 +85,7 @@ jobs:
          kubectl apply -f k8s/backend/deployment.yaml
          kubectl apply -f k8s/backend/service.yaml
          kubectl apply -f k8s/backend/ingress.yaml
+         kubectl get pods -n backend
 
 
 
